--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,15 +30,24 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  cloud_firestore: ^6.0.0
+  firebase_core: ^4.0.0 
+  firebase_auth: ^6.0.1
+  google_sign_in: ^6.2.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.14.4"
   flutter_test:
     sdk: flutter
 
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "images/march.jpg"
+  min_sdk_android: 21
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
