--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,10 @@ dependencies:
 
 dev_dependencies:
   flutter_launcher_icons: "^0.14.4"
+  flutter_lints: ^5.0.0
   flutter_test:
+    sdk: flutter
+  integration_test:
     sdk: flutter
 
 flutter_launcher_icons:
@@ -60,12 +63,6 @@ flutter_launcher_icons:
   ios: true
   image_path: "images/march.jpg"
   min_sdk_android: 21
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
